# ncat_kinovagen3_ros2

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_kortex/gazebo_ign_models/: robot.world.config
ros2_kortex/kortex_bringup/: CMakeLists.txt
ros2_kortex/kortex_bringup/launch/: gen3.launch.py  kortex_sim_control.launch.py
ros2_kortex/kortex_bringup/scripts/customized/: 1joint_forward_once.py  2gripper_once.py  3joint_forward_multiple.py  4marker_multiple.py  5kdl_1.py  5kdl_2.py  5moveit_ik_one.py  6moveit_ik_multiple.py
ros2_kortex/kortex_bringup/scripts/customized/camera_neks/: step1_show_rgb.py  step2_show_rgb.py  step2_show_rgb_hsv_tuner.py  step3_detect_part.py  step4_detect_parts.py  step5_depth.py  step6_tf_convertor.py  step7_tf_base2camera.py
ros2_kortex/kortex_bringup/scripts/customized/kdl_not working/: 5kdl_3.py  5kdl_4.py  5kdl_5.py  5kdl_6.py  5kdl_6b.py  5kdl_6c_axis.py  5kdl_6d.py  5kdl_6e.py
ros2_kortex/kortex_bringup/src/: sequential_planner_cpp.cpp
ros2_kortex/kortex_description/robots/: gen3.xacro
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: kinematics.yaml
ros2_kortex_vision/: README.md
